--- a/_config.yml
+++ b/_config.yml
@@ -83,9 +83,9 @@ analytics:
 author:
   name             : "David Gruskin"
   avatar           : "profile.jpeg"
-  bio              : "MD-PhD Candidate at Columbia University"
+  bio              : "MD-PhD Candidate at Columbia University | Shadlen + Kahn Labs"
   location         : "New York, New York"
-  employer         : "Shadlen and Kahn Labs"
+  employer         : ""
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=david+c+gruskin"
   googlescholar    : "https://scholar.google.com/citations?user=E2J3RgkAAAAJ&hl=en"
   email            :
